--- a/Task 9/assets/index.html
+++ b/Task 9/assets/index.html
@@ -72,53 +72,85 @@
           <div class="line"></div>
         </div>
 
-        <div>
-          <ul class="electronic__list">
-            <li class="electronic__list__item">
-              <img
-                class="electronic__list__image"
-                src="img/minus.svg"
-                alt="#"
-              />
-              <div class="circle"></div>
-              <div class="item__list__overview__block">
-                <h2 class="item__list__header">Apple iPhone 7, 128 GB</h2>
-                <p class="item__list__overview">
-                  Electronics #32343424 - 12 July 2015
-                </p>
-              </div>
-              <h3 class="item__list__price">
-                $650. <span class="cents">00</span>
-              </h3>
-            </li>
+        <ul class="electronic__list">
+          <li class="electronic__list__item">
+            <img class="electronic__list__image" src="img/minus.svg" alt="#" />
+            <div class="circle"></div>
+            <div class="item__list__overview__block">
+              <h2 class="item__list__header">Apple iPhone 7, 128 GB</h2>
+              <p class="item__list__overview">
+                Electronics #32343424 - 12 July 2015
+              </p>
+            </div>
+            <h3 class="item__list__price">
+              $650. <span class="cents">00</span>
+            </h3>
+          </li>
 
-            <li class="electronic__list__item">
-              <img class="electronic__list__image" src="img/plus.svg" alt="#" />
-              <div class="circle"></div>
-              <div class="item__list__overview__block">
-                <h2 class="item__list__header">Funds Added</h2>
-                <p class="item__list__overview">Payment #5435 - 11 July 2015</p>
-              </div>
-              <h3 class="item__list__price">
-                $900. <span class="cents">00</span>
-              </h3>
-            </li>
+          <li class="electronic__list__item">
+            <img class="electronic__list__image" src="img/plus.svg" alt="#" />
+            <div class="circle"></div>
+            <div class="item__list__overview__block">
+              <h2 class="item__list__header">Funds Added</h2>
+              <p class="item__list__overview">Payment #5435 - 11 July 2015</p>
+            </div>
+            <h3 class="item__list__price__confirmed">
+              $900. <span class="cents">00</span>
+            </h3>
+          </li>
 
-            <li class="electronic__list__item">
-              <img class="electronic__list__image" src="img/plus.svg" alt="#" />
-              <div class="circle"></div>
-              <div class="item__list__overview__block">
-                <h2 class="item__list__header">Energy Bill</h2>
-                <p class="item__list__overview">
-                  Other #745237423 - 11 July 2015
-                </p>
-              </div>
-              <h3 class="item__list__price">
-                $84. <span class="cents">90</span>
-              </h3>
-            </li>
-          </ul>
-        </div>
+          <li class="electronic__list__item">
+            <img class="electronic__list__image" src="img/minus.svg" alt="#" />
+            <div class="circle"></div>
+            <div class="item__list__overview__block">
+              <h2 class="item__list__header">Energy Bill</h2>
+              <p class="item__list__overview">
+                Other #745237423 - 11 July 2015
+              </p>
+            </div>
+            <h3 class="item__list__price">
+              $84. <span class="cents">90</span>
+            </h3>
+          </li>
+
+          <li class="electronic__list__item">
+            <img class="electronic__list__image" src="img/minus.svg" alt="#" />
+            <div class="circle"></div>
+            <div class="item__list__overview__block">
+              <h2 class="item__list__header">They Eye Cinema Ticket</h2>
+              <p class="item__list__overview">
+                Entertainmnet #323434424 - 10 July 2015
+              </p>
+            </div>
+            <h3 class="item__list__price">
+              $40. <span class="cents">00</span>
+            </h3>
+          </li>
+
+          <li class="electronic__list__item">
+            <img class="electronic__list__image" src="img/minus.svg" alt="#" />
+            <div class="circle"></div>
+            <div class="item__list__overview__block">
+              <h2 class="item__list__header">McFood Restaraunt</h2>
+              <p class="item__list__overview">Cafes #32448 - 10 July 2015</p>
+            </div>
+            <h3 class="item__list__price">
+              $10. <span class="cents">50</span>
+            </h3>
+          </li>
+
+          <li class="electronic__list__item">
+            <img class="electronic__list__image" src="img/minus.svg" alt="#" />
+            <div class="circle"></div>
+            <div class="item__list__overview__block">
+              <h2 class="item__list__header">Gas Station</h2>
+              <p class="item__list__overview">Other #2138453 - 10 July 2015</p>
+            </div>
+            <h3 class="item__list__price">
+              $10. <span class="cents">50</span>
+            </h3>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
