Закончил первую страницу

--- a/Task 10/assets/index.html
+++ b/Task 10/assets/index.html
@@ -24,27 +24,32 @@
     (one file for each design element like button, search input etc.)
     and use @import to get them combined in the main.css file.
   --></body>
-  <div class="header">
-    <img class="header__logo" src="img/logo.svg" alt="#" />
-    <div class="nav">
-      <button class="header__button">About</button>
-      <button class="header__button">Offers</button>
-      <button class="header__button">Services</button>
-      <input
-        class="header__input"
-        type="text"
-        placeholder="How can we help you?"
-      />
+  <div class="root">
+    <div class="header">
+      <img class="header__logo" src="img/logo.svg" alt="#" />
+      <div class="nav">
+        <button class="header__button">About</button>
+        <button class="header__button">Offers</button>
+        <button class="header__button">Services</button>
+        <input
+          class="header__input"
+          type="text"
+          placeholder="How can we help you?"
+        />
+      </div>
     </div>
-  </div>
-  <div class="info__block">
-    <h1 class="info__block__header">Freedom calls.</h1>
-    <p class="info__block__text">
-      Answer a call from your surfboard. Ask Siri to send a message. Stream your
-      favorite songs on your run. And do it all while leaving your phone behind.
-      Introducing Apple Watch Series 3 with cellular. Now you have the freedom
-      to go with just your watch
-    </p>
-    <button class="info__block__button">watch the keynote</button>
+    <div class="info__block">
+      <h1 class="info__block__header">Freedom calls.</h1>
+      <p class="info__block__text">
+        Answer a call from your surfboard. Ask Siri to send a message. Stream
+        your favorite songs on your run. And do it all while leaving your phone
+        behind. Introducing Apple Watch Series 3 with cellular. Now you have the
+        freedom to go with just your watch
+      </p>
+      <button class="info__block__button">watch the keynote</button>
+    </div>
+    <div class="first__page__image">
+      <img src="img/watches.jpg" alt="#" />
+    </div>
   </div>
 </html>
