--- a/Task 10/assets/index.html
+++ b/Task 10/assets/index.html
@@ -23,33 +23,67 @@
     If you want some more - try splitting your css into several files
     (one file for each design element like button, search input etc.)
     and use @import to get them combined in the main.css file.
-  --></body>
-  <div class="root">
-    <div class="header">
-      <img class="header__logo" src="img/logo.svg" alt="#" />
-      <div class="nav">
-        <button class="header__button">About</button>
-        <button class="header__button">Offers</button>
-        <button class="header__button">Services</button>
-        <input
-          class="header__input"
-          type="text"
-          placeholder="How can we help you?"
-        />
+  -->
+    <div class="root">
+      <div class="first__page">
+        <div class="header">
+          <img class="header__logo" src="img/logo.svg" alt="#" />
+          <div class="nav">
+            <button class="header__button">About</button>
+            <button class="header__button">Offers</button>
+            <button class="header__button">Services</button>
+            <input
+              class="header__input"
+              type="text"
+              placeholder="How can we help you?"
+            />
+          </div>
+        </div>
+        <div class="info__block">
+          <h1 class="info__block__header">Freedom calls.</h1>
+          <p class="info__block__text">
+            Answer a call from your surfboard. Ask Siri to send a message.
+            Stream your favorite songs on your run. And do it all while leaving
+            your phone behind. Introducing Apple Watch Series 3 with cellular.
+            Now you have the freedom to go with just your watch
+          </p>
+          <button class="info__block__button">watch the keynote</button>
+        </div>
+        <img class="first__page__image" src="img/watches.jpg" alt="#" />
+      </div>
+
+      <div class="line"></div>
+
+      <div class="second__page">
+        <div class="second__page__info">
+          <div>
+            <h2>know your runs. in and out</h2>
+            <p>
+              Train smarter with more in-run stats. Want to compare a run to
+              your last five? Just swipe left. Mark splits by selecting pause or
+              using gestures, like tapping the screen or double-clicking the
+              side button. And get a full post-run report, including elevation.
+            </p>
+          </div>
+          <div>
+            <h2>run in good spirits</h2>
+            <p>
+              A little support can go a long way. You can receive encouraging
+              emoji from friends. And reminders triggered by your friends'
+              shared activity, the current weather, or your own history give you
+              every reason to run.
+            </p>
+            <div>
+              <h2>just do it. sunday</h2>
+              <p>
+                Run every Sunday and see how long you can keep your streak
+                alive. Fuel your run with exclusive Nike+ Run Club playlists on
+                Apple Music.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="info__block">
-      <h1 class="info__block__header">Freedom calls.</h1>
-      <p class="info__block__text">
-        Answer a call from your surfboard. Ask Siri to send a message. Stream
-        your favorite songs on your run. And do it all while leaving your phone
-        behind. Introducing Apple Watch Series 3 with cellular. Now you have the
-        freedom to go with just your watch
-      </p>
-      <button class="info__block__button">watch the keynote</button>
-    </div>
-    <div class="first__page__image">
-      <img src="img/watches.jpg" alt="#" />
-    </div>
-  </div>
+  </body>
 </html>
