--- a/Task 10/assets/index.html
+++ b/Task 10/assets/index.html
@@ -56,26 +56,27 @@
 
       <div class="second__page">
         <div class="second__page__info">
-          <div>
-            <h2>know your runs. in and out</h2>
-            <p>
+          <div class="second__page__info__block">
+            <h2 class="second__page__info__block__header">know your runs. in and out</h2>
+            <p class="second__page__info__block__text">
               Train smarter with more in-run stats. Want to compare a run to
               your last five? Just swipe left. Mark splits by selecting pause or
               using gestures, like tapping the screen or double-clicking the
               side button. And get a full post-run report, including elevation.
             </p>
           </div>
-          <div>
-            <h2>run in good spirits</h2>
-            <p>
+          <div class="second__page__info__block">
+            <h2 class="second__page__info__block__header">run in good spirits</h2>
+            <p class="second__page__info__block__text">
               A little support can go a long way. You can receive encouraging
               emoji from friends. And reminders triggered by your friends'
               shared activity, the current weather, or your own history give you
               every reason to run.
             </p>
-            <div>
-              <h2>just do it. sunday</h2>
-              <p>
+            </div>
+            <div class="second__page__info__block">
+              <h2 class="second__page__info__block__header">just do it. sunday</h2>
+              <p class="second__page__info__block__text">
                 Run every Sunday and see how long you can keep your streak
                 alive. Fuel your run with exclusive Nike+ Run Club playlists on
                 Apple Music.
