--- a/Task 10/assets/index.html
+++ b/Task 10/assets/index.html
@@ -64,8 +64,13 @@
               using gestures, like tapping the screen or double-clicking the
               side button. And get a full post-run report, including elevation.
             </p>
+            <div class="dots">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
           </div>
-          <div class="second__page__info__block">
+             <div class="second__page__info__block">
             <h2 class="second__page__info__block__header">run in good spirits</h2>
             <p class="second__page__info__block__text">
               A little support can go a long way. You can receive encouraging
@@ -73,6 +78,11 @@
               shared activity, the current weather, or your own history give you
               every reason to run.
             </p>
+            <div class="dots">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
             </div>
             <div class="second__page__info__block">
               <h2 class="second__page__info__block__header">just do it. sunday</h2>
@@ -81,6 +91,10 @@
                 alive. Fuel your run with exclusive Nike+ Run Club playlists on
                 Apple Music.
               </p>
+              <div class="button__line">
+              <div class="second__page__info__block__button__line"></div>
+              <button class="second__page__info__block__button">learn more</button>
+            </div>
             </div>
           </div>
         </div>
