--- a/Task 10/assets/index.html
+++ b/Task 10/assets/index.html
@@ -92,12 +92,29 @@
                 Apple Music.
               </p>
               <div class="button__line">
-              <div class="second__page__info__block__button__line"></div>
-              <button class="second__page__info__block__button">learn more</button>
+                <div class="second__page__info__block__button__line"></div>
+                <button class="second__page__info__block__button">learn more</button>
             </div>
             </div>
           </div>
+          <div class="main__block">
+          <div class="second__page__overview">
+            <h2 class="info__block__header">Nike Sport Band. <br>
+              Light.Flexible. <br>
+              Breathable. <br>
+            </h2>
+            <p class="info__block__text">Made from the same durable, lightweight fluoroelastomer as the original Apple Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of compression-molded perforations.</p>
+            <button class="info__block__button">buy now</button>
+          </div>
+          <img class="second__page__image" src="img/preview.jpg" alt="#">
         </div>
+        </div>
+          <div class="third__page">
+            <div class="container">
+              
+            </div>
+      
+          </div>
       </div>
     </div>
   </body>
