--- a/Task 10/assets/index.html
+++ b/Task 10/assets/index.html
@@ -111,9 +111,16 @@
         </div>
           <div class="third__page">
             <div class="container">
-              
+              <div class="third__page__info__block">
+                <h2 class="third__page__header">
+                  Take control of your health.
+                </h2>
+                <p class="third__page__text">
+                  With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment. And it's swimproof, so you can take a post-run dip in the pool.
+                </p>
+                <button class="third__page__button">explore features</button>
+              </div>
             </div>
-      
           </div>
       </div>
     </div>
