--- a/Task 11/assets/index.html
+++ b/Task 11/assets/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Loop 2 - Step 1</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
-  <!--
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Loop 2 - Step 1</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <!--
     You made to Loop 2!
 
     You should already be proud of yourself.
@@ -17,5 +20,22 @@
 
     Ready. Set. Go!
   -->
-</body>
+
+    <div class="container">
+      <div class="main__block">
+        <div class="header">
+          <h2 class="active">synthetic</h2>
+          <h2 class="default">wool</h2>
+          <h2 class="default">denim</h2>
+          <h2 class="default">silk</h2>
+          <h2 class="default">line</h2>
+        </div>
+        <div class="overview">
+          Loads should under 8 pounds. It is recommended using neutral detergent
+          to prevent <br />
+          damage to the cloth and to improve the washing results.
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
