Начал работу над второй частью сайта (Блоки)

--- a/Task 11/assets/index.html
+++ b/Task 11/assets/index.html
@@ -35,6 +35,21 @@
           to prevent <br />
           damage to the cloth and to improve the washing results.
         </div>
+        <ul class="blocks">
+          <li class="block__one">
+            <p class="blocks__paragraph">Timer</p>
+            <h2 class="blocks__header">45 min</h3>
+            <button class="button__block">start</button>
+          </li>
+          <li class="block__two">
+            <p class="blocks__paragraph">Temperature</p>
+            <h2 class="blocks__header">Cold</h3>
+          </li>
+          <li class="block__three">
+            <p class="blocks__paragraph">Load</p>
+            <h2 class="blocks__header">Medium</h3>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
