Добавил анимацию на кнопку, также добавил hover к хедерам

--- a/Task 11/assets/index.html
+++ b/Task 11/assets/index.html
@@ -35,6 +35,7 @@
           to prevent <br />
           damage to the cloth and to improve the washing results.
         </div>
+        <div></div>
         <ul class="blocks">
           <li class="block__one">
             <p class="blocks__paragraph">Timer</p>
@@ -50,6 +51,7 @@
             <h2 class="blocks__header">Medium</h3>
           </li>
         </ul>
+        <div></div>
       </div>
     </div>
   </body>
