--- a/Task 12/assets/index.html
+++ b/Task 12/assets/index.html
@@ -23,6 +23,11 @@
           <h2 class="header__header">Account settngs</h2>
           <img class="close__image" src="img/crossed.png" alt="close" />
         </div>
+        <div class="user__info">
+          <div class="profile__image">
+            <img class="avatar" src="img/avatar.jpg" alt="avatar" />
+          </div>
+        </div>
       </div>
     </div>
   </body>
