Добавил поля ввода

--- a/Task 12/assets/index.html
+++ b/Task 12/assets/index.html
@@ -27,6 +27,44 @@
           <div class="profile__image">
             <img class="avatar" src="img/avatar.jpg" alt="avatar" />
           </div>
+          <div class="profile__form">
+            <h3 class="profile__form__header">username</h3>
+            <input
+              class="profile__form__input"
+              type="text"
+              placeholder="Enter your username"
+            />
+            <div>
+              <h3 class="profile__form__header">first name</h3>
+              <input
+                class="profile__form__input"
+                type="text"
+                placeholder="Enter your first name"
+              />
+              <h3 class="profile__form__header">last name</h3>
+              <input
+                class="profile__form__input"
+                type="text"
+                placeholder="Enter your last name"
+              />
+            </div>
+            <h3 class="profile__form__header">email</h3>
+            <input
+              class="profile__form__input"
+              type="text"
+              placeholder="Enter your email"
+            />
+            <h3 class="profile__form__header">bio</h3>
+            <input
+              class="profile__form__input"
+              type="text"
+              placeholder="Tell us about yourself"
+            />
+          </div>
+        </div>
+        <div class="form__controls">
+          <button>Cancel</button>
+          <button>Save</button>
         </div>
       </div>
     </div>
