Сделал форму, осталось настроить inpput для BIO, также осталось только кнопки сделать

--- a/Task 12/assets/index.html
+++ b/Task 12/assets/index.html
@@ -33,32 +33,41 @@
               class="profile__form__input"
               type="text"
               placeholder="Enter your username"
+              size="45"
             />
-            <div>
-              <h3 class="profile__form__header">first name</h3>
-              <input
-                class="profile__form__input"
-                type="text"
-                placeholder="Enter your first name"
-              />
-              <h3 class="profile__form__header">last name</h3>
-              <input
-                class="profile__form__input"
-                type="text"
-                placeholder="Enter your last name"
-              />
+            <div class="name__lastname">
+              <div>
+                <h3 class="profile__form__header">first name</h3>
+                <input
+                  class="profile__form__input"
+                  type="text"
+                  placeholder="Enter your first name"
+                  size="30"
+                />
+              </div>
+              <div>
+                <h3 class="profile__form__header">last name</h3>
+                <input
+                  class="profile__form__input"
+                  type="text"
+                  placeholder="Enter your last name"
+                  size="33"
+                />
+              </div>
             </div>
             <h3 class="profile__form__header">email</h3>
             <input
               class="profile__form__input"
               type="text"
               placeholder="Enter your email"
+              size="77"
             />
             <h3 class="profile__form__header">bio</h3>
             <input
-              class="profile__form__input"
+              class="profile__form__input__bio"
               type="text"
               placeholder="Tell us about yourself"
+              size="77"
             />
           </div>
         </div>
