Застилизовал кнопки, не могу понять как их вниз перенести

--- a/Task 12/assets/index.html
+++ b/Task 12/assets/index.html
@@ -72,8 +72,8 @@
           </div>
         </div>
         <div class="form__controls">
-          <button>Cancel</button>
-          <button>Save</button>
+          <button class="form__controls__button">Cancel</button>
+          <button class="form__controls__button">Save</button>
         </div>
       </div>
     </div>
