Добавил основную часть header'a

--- a/Task 13/assets/index.html
+++ b/Task 13/assets/index.html
@@ -13,7 +13,15 @@
   </head>
   <body>
     <div class="container">
-      <div class="main__block"></div>
+      <div class="main__block">
+        <div class="main__block__header">
+          <div class="image__block">
+            <img class="header__image" src="img/photo.svg" alt="#" />
+          </div>
+          <p class="main__block__paragraph">Photos</p>
+          <img src="img/arrow.svg" alt="#" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
