Начал блок основной информации

--- a/Task 13/assets/index.html
+++ b/Task 13/assets/index.html
@@ -21,6 +21,11 @@
           <p class="main__block__paragraph">Photos</p>
           <img src="img/arrow.svg" alt="#" />
         </div>
+        <ul class="timeline__list">
+          <li>Holidays</li>
+          <li>Berlin</li>
+          <li>Summer vacation</li>
+        </ul>
       </div>
     </div>
   </body>
