Работаю над основным списком

--- a/Task 13/assets/index.html
+++ b/Task 13/assets/index.html
@@ -22,9 +22,9 @@
           <img src="img/arrow.svg" alt="#" />
         </div>
         <ul class="timeline__list">
-          <li>Holidays</li>
-          <li>Berlin</li>
-          <li>Summer vacation</li>
+          <li class="timeline__list__item">Holidays</li>
+          <li class="timeline__list__item">Berlin</li>
+          <li class="timeline__list__item">Summer vacation</li>
         </ul>
       </div>
     </div>
