--- a/Task 13/assets/index.html
+++ b/Task 13/assets/index.html
@@ -23,8 +23,8 @@
         </div>
         <ul class="timeline__list">
           <li class="timeline__list__item">Holidays</li>
-          <li class="timeline__list__item">Berlin</li>
-          <li class="timeline__list__item">Summer vacation</li>
+          <li class="timeline__list__item__two">Berlin</li>
+          <li class="timeline__list__item__three">Summer vacation</li>
         </ul>
       </div>
     </div>
