--- a/Task 13/assets/index.html
+++ b/Task 13/assets/index.html
@@ -16,7 +16,7 @@
       <div class="main__block">
         <div class="main__block__header">
           <div class="image__block">
-            <img class="header__image" src="img/photo.svg" alt="#" />
+            <img class="image" src="img/photo.svg" alt="#" />
           </div>
           <p class="main__block__paragraph">Photos</p>
           <img src="img/arrow.svg" alt="#" />
@@ -26,6 +26,12 @@
           <li class="timeline__list__item__two">Berlin</li>
           <li class="timeline__list__item__three">Summer vacation</li>
         </ul>
+        <div class="footer">
+          <div class="image__block__footer">
+            <img class="image" src="img/folder.svg" alt="#" />
+          </div>
+          <p class="main__block__paragraph">Files</p>
+        </div>
       </div>
     </div>
   </body>
