хеддер почти готов

--- a/Task 14/assets/index.html
+++ b/Task 14/assets/index.html
@@ -12,6 +12,24 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <ul class="header">
+        <li class="default">
+          <img src="img/event.svg" alt="#" />
+        </li>
+        <li class="default">
+          <img src="img/finance.svg" alt="#" />
+        </li>
+        <li class="active">
+          <img src="img/cafe.svg" alt="#" />
+        </li class="default">
+        <li class="default">
+          <img  src="img/gift.svg" alt="#" />
+        </li>
+        <li class="default">
+          <img  src="img/pets.svg" alt="#" />
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
