--- a/Task 14/assets/index.html
+++ b/Task 14/assets/index.html
@@ -21,7 +21,7 @@
           <img src="img/finance.svg" alt="#" />
         </li>
         <li class="active">
-          <img src="img/cafe.svg" alt="#" />
+          <img class="image__active" src="img/cafe.svg" alt="#" />
         </li class="default">
         <li class="default">
           <img  src="img/gift.svg" alt="#" />
