Добавил хеддер основго блокаЭ

--- a/Task 14/assets/index.html
+++ b/Task 14/assets/index.html
@@ -30,6 +30,16 @@
           <img  src="img/pets.svg" alt="#" />
         </li>
       </ul>
+
+      <div class="main__block">
+        <div class="main__block__header">
+          <h2 class="header__text">Food</h2>
+          <div class="locations__group">
+            <img class="main__block__header__img" src="img/location.svg" alt="#">
+            <p class="main__block__header__paragraph">Madrid</p>
+         </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
