--- a/Task 14/assets/index.html
+++ b/Task 14/assets/index.html
@@ -39,6 +39,25 @@
             <p class="main__block__header__paragraph">Madrid</p>
          </div>
         </div>
+
+        <ul class="meal__list">
+          <li class="meal__item">
+            <p class="meal__list__text">Pizza</p>
+            <p class="meal__list__number">17</p>
+          </li>
+          <li class="meal__item">
+            <p class="meal__list__text">Sushi</p>
+            <p class="meal__list__number">9</p>
+          </li>
+          <li class="meal__item">
+            <p class="meal__list__text">Gourment</p>
+            <p class="meal__list__number">22</p>
+          </li>
+          <li class="meal__item">
+            <p class="meal__list__text">Burger</p>
+            <p class="meal__list__number">14</p>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
