--- a/Task 14/assets/index.html
+++ b/Task 14/assets/index.html
@@ -42,19 +42,19 @@
 
         <ul class="meal__list">
           <li class="meal__item">
-            <p class="meal__list__text">Pizza</p>
+            <h3 class="meal__list__text">Pizza</h3>
             <p class="meal__list__number">17</p>
           </li>
           <li class="meal__item">
-            <p class="meal__list__text">Sushi</p>
+            <h3 class="meal__list__text">Sushi</h3>
             <p class="meal__list__number">9</p>
           </li>
           <li class="meal__item">
-            <p class="meal__list__text">Gourment</p>
+            <h3 class="meal__list__text">Gourment</h3>
             <p class="meal__list__number">22</p>
           </li>
-          <li class="meal__item">
-            <p class="meal__list__text">Burger</p>
+          <li class="meal__item__last">
+            <h3 class="meal__list__text">Burger</h3>
             <p class="meal__list__number">14</p>
           </li>
         </ul>
