Работа над правой частью

--- a/Task 15/assets/index.html
+++ b/Task 15/assets/index.html
@@ -27,6 +27,16 @@
           <img src="img/down.svg" alt="#" />
         </button>
       </div>
+
+      <div class="right__part">
+        <div class="overlay"></div>
+        <div class="rigth__part__content">
+          <button class="right__button">
+            <p>read</p>
+            <img src="img/more.svg" alt="#" />
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
