--- a/Task 15/assets/index.html
+++ b/Task 15/assets/index.html
@@ -32,9 +32,22 @@
         <div class="overlay"></div>
         <div class="rigth__part__content">
           <button class="right__button">
-            <p>read</p>
+            <p class="right__button_text">read</p>
             <img src="img/more.svg" alt="#" />
           </button>
+          <div class="block">
+            <div class="right__part__main__text">
+              <h1 class="right__part__main__text__header">2</h1>
+              <p class="right__part__main__text__paragraph">
+                Top things to see during a holiday in London
+              </p>
+            </div>
+
+            <div class="rigth__part__content__views">
+              <img src="img/view.svg" alt="#" />
+              <p>49.403</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
