--- a/Task 16/assets/index.html
+++ b/Task 16/assets/index.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="calendar">
+        <div class="calendar__header">
+          <p class="date__header">Thursday 7th</p>
+          <p class="date__header">January 2016</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
