--- a/Task 16/assets/index.html
+++ b/Task 16/assets/index.html
@@ -18,6 +18,70 @@
           <p class="date__header">Thursday 7th</p>
           <p class="date__header">January 2016</p>
         </div>
+
+        <div class="table__container">
+          <table class="table__calendar">
+            <thead class="table__head">
+              <tr class="table__days">
+                <th class="days">Mon</th>
+                <th class="days">Tue</th>
+                <th class="days">Wed</th>
+                <th class="days">Thu</th>
+                <th class="days">Fri</th>
+                <th class="days">Sat</th>
+                <th class="days">Sun</th>
+              </tr>
+            </thead>
+            <tbody class="calendar__body">
+              <tr class="dates">
+                <td class="previous__month">28</td>
+                <td class="previous__month">29</td>
+                <td class="previous__month">30</td>
+                <td class="previous__month">31</td>
+                <td class="now__month">1</td>
+                <td class="now__month">2</td>
+                <td class="now__month">3</td>
+              </tr>
+
+              <tr class="dates">
+                <td class="now__month">4</td>
+                <td class="now__month">5</td>
+                <td class="now__month">6</td>
+                <td class="now__month">7</td>
+                <td class="now__month">8</td>
+                <td class="now__month">9</td>
+                <td class="now__month">10</td>
+              </tr>
+              <tr class="dates">
+                <td class="now__month">11</td>
+                <td class="now__month">12</td>
+                <td class="now__month">13</td>
+                <td class="now__month">14</td>
+                <td class="now__month">15</td>
+                <td class="now__month">16</td>
+                <td class="now__month">17</td>
+              </tr>
+              <tr class="dates">
+                <td class="now__month">18</td>
+                <td class="now__month">19</td>
+                <td class="now__month">20</td>
+                <td class="now__month">21</td>
+                <td class="now__month">22</td>
+                <td class="now__month">23</td>
+                <td class="now__month">24</td>
+              </tr>
+              <tr class="dates">
+                <td class="now__month">25</td>
+                <td class="now__month">26</td>
+                <td class="now__month">27</td>
+                <td class="now__month">28</td>
+                <td class="now__month">29</td>
+                <td class="now__month">30</td>
+                <td class="now__month">31</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </body>
