--- a/Task 16/assets/index.html
+++ b/Task 16/assets/index.html
@@ -82,6 +82,11 @@
             </tbody>
           </table>
         </div>
+        <div class="footer">
+          <div>11:35 am</div>
+          <div>+</div>
+          <div>12C</div>
+        </div>
       </div>
     </div>
   </body>
