Осталось пару штрихов и будет готово

--- a/Task 16/assets/index.html
+++ b/Task 16/assets/index.html
@@ -47,7 +47,7 @@
                 <td class="now__month">4</td>
                 <td class="now__month">5</td>
                 <td class="now__month">6</td>
-                <td class="now__month">7</td>
+                <td class="now__month__seven">7</td>
                 <td class="now__month">8</td>
                 <td class="now__month">9</td>
                 <td class="now__month">10</td>
@@ -84,8 +84,8 @@
         </div>
         <div class="footer">
           <div>11:35 am</div>
-          <div>+</div>
-          <div>12C</div>
+          <div class="plus">+</div>
+          <div>12&degC</div>
         </div>
       </div>
     </div>
