--- a/Task 16/assets/index.html
+++ b/Task 16/assets/index.html
@@ -58,12 +58,12 @@
                 <td class="now__month">13</td>
                 <td class="now__month">14</td>
                 <td class="now__month">15</td>
-                <td class="now__month">16</td>
+                <td class="now__month__sixtten">16</td>
                 <td class="now__month">17</td>
               </tr>
               <tr class="dates">
                 <td class="now__month">18</td>
-                <td class="now__month">19</td>
+                <td class="now__month__nineteen">19</td>
                 <td class="now__month">20</td>
                 <td class="now__month">21</td>
                 <td class="now__month">22</td>
