--- a/Task 17/assets/index.html
+++ b/Task 17/assets/index.html
@@ -12,6 +12,19 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="main__block">
+        <div class="left__sector">
+          <div class="left__sector__block">
+            <h2 class="left__sector__header">Press page</h2>
+            <p class="left__sector__text">Our news and media information</p>
+            <button class="left__sector__button">
+              <img src="img/file.svg" alt="#" />
+              Media kit
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
