Добавил хедер в правом секторе

--- a/Task 17/assets/index.html
+++ b/Task 17/assets/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./rigthSectro.css" />
   </head>
   <body>
     <div class="container">
@@ -22,6 +23,17 @@
               <img src="img/file.svg" alt="#" />
               Media kit
             </button>
+          </div>
+        </div>
+
+        <div class="right__sector">
+          <div class="right__sector__block">
+            <div class="right__sector__menu">
+              <h2 class="right__sector__header">Articles</h2>
+              <button class="burger__menu">
+                <img src="img/menu.svg" alt="#" />
+              </button>
+            </div>
           </div>
         </div>
       </div>
