--- a/Task 17/assets/index.html
+++ b/Task 17/assets/index.html
@@ -34,6 +34,19 @@
                 <img src="img/menu.svg" alt="#" />
               </button>
             </div>
+
+            <div class="time__line">
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
